@@ -9,6 +9,7 @@ import net.sparkzz.shops.Shops;
 import net.sparkzz.shops.Store;
 import net.sparkzz.shops.mocks.MockVault;
 import net.sparkzz.util.InventoryManagementSystem;
+import net.sparkzz.util.Notifier;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.generator.WorldInfo;
@@ -43,6 +44,7 @@ class ShopCommandTest {
 
         MockBukkit.loadWith(MockVault.class, new PluginDescriptionFile("Vault", "MOCK", "net.sparkzz.shops.mocks.MockVault"));
         MockBukkit.load(Shops.class);
+        loadConfig();
 
         mrSparkzz = server.addPlayer("MrSparkzz");
         player = server.addPlayer();
@@ -55,12 +57,13 @@ class ShopCommandTest {
 
     @AfterAll
     static void tearDown() {
-        // Stop the mock server
         MockBukkit.unmock();
-        Store.setDefaultStore(null);
+        unLoadConfig();
+        Store.DEFAULT_STORES.clear();
         Store.STORES.clear();
     }
 
+    @SuppressWarnings("OptionalGetWithoutIsPresent")
     @Order(1)
     @Nested
     @DisplayName("OnTabComplete Tests")
@@ -69,14 +72,14 @@ class ShopCommandTest {
 
         @BeforeEach
         void setUpShops() {
-            Store.setDefaultStore(new Store("BetterBuy", mrSparkzz.getUniqueId()));
+            Store.setDefaultStore(mrSparkzz.getWorld(), new Store("BetterBuy", mrSparkzz.getUniqueId()));
             new Store("DiscountPlus", mrSparkzz.getUniqueId());
             new Store("DiscountMinus", mrSparkzz.getUniqueId());
         }
 
         @AfterEach
         void tearDownShops() {
-            Store.setDefaultStore(null);
+            Store.DEFAULT_STORES.clear();
             Store.STORES.clear();
         }
 
@@ -128,8 +131,12 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 2 args - add tab complete")
         @Order(23)
         void testShopTabComplete_Add2Args() {
-            List<String> expectedOptions = Arrays.stream(Material.values())
-                    .map(m -> m.toString().toLowerCase()).toList();
+            mrSparkzz.getInventory().addItem(new ItemStack(Material.EMERALD, 64));
+            mrSparkzz.getInventory().addItem(new ItemStack(Material.STICK, 32));
+
+            List<String> expectedOptions = Arrays.stream(mrSparkzz.getInventory().getContents())
+                    .filter(Objects::nonNull)
+                    .map(s -> s.getType().toString().toLowerCase()).toList();
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop add ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -140,7 +147,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 2 args - buy tab complete")
         @Order(24)
         void testShopTabComplete_Buy2Args() {
-            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).getItems().keySet();
+            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).get().getItems().keySet();
 
             List<String> expectedOptions = Arrays.stream(shopItems.toArray())
                     .map(m -> m.toString().toLowerCase()).toList();
@@ -154,7 +161,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 2 args - remove tab complete")
         @Order(25)
         void testShopTabComplete_Remove2Args() {
-            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).getItems().keySet();
+            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).get().getItems().keySet();
 
             List<String> expectedOptions = Arrays.stream(shopItems.toArray())
                     .map(m -> m.toString().toLowerCase()).toList();
@@ -168,11 +175,11 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 2 args - update tab complete when op")
         @Order(26)
         void testShopTabComplete_Update2Args_WhenOp() {
-            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).getItems().keySet();
+            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(mrSparkzz).get().getItems().keySet();
 
             List<String> expectedOptions = Arrays.stream(shopItems.toArray())
                     .map(m -> m.toString().toLowerCase()).collect(Collectors.toList());
-            expectedOptions.addAll(List.of("infinite-funds", "infinite-stock", "shop-name"));
+            expectedOptions.addAll(List.of("infinite-funds", "infinite-stock", "location", "store-name"));
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -183,11 +190,10 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 2 args - update tab complete when not op")
         @Order(27)
         void testShopTabComplete_Update2Args_WhenNotOp() {
-            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(player).getItems().keySet();
+            Set<Material> shopItems = InventoryManagementSystem.locateCurrentStore(player).get().getItems().keySet();
 
             List<String> expectedOptions = Arrays.stream(shopItems.toArray())
                     .map(m -> m.toString().toLowerCase()).collect(Collectors.toList());
-            expectedOptions.add("shop-name");
             List<String> actualOptions = server.getCommandTabComplete(player, "shop update ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -311,7 +317,7 @@ class ShopCommandTest {
         @Order(46)
         void testShopTabComplete_Update3Args_ShopName() {
             List<String> expectedOptions = Collections.singletonList("<name>");
-            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update shop-name ");
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update store-name ");
 
             assertEquals(expectedOptions, actualOptions);
             printSuccessMessage("tab complete - \"shop update shop-name\"");
@@ -400,7 +406,8 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 4 args - update location DiscountMinus tab complete")
         @Order(63)
         void testShopTabComplete_Update4Args_LocationWithStore() {
-            List<String> expectedOptions = Bukkit.getWorlds().stream().map(WorldInfo::getName).toList();
+            List<String> expectedOptions = Bukkit.getWorlds().stream().map(WorldInfo::getName).collect(Collectors.toList());
+            expectedOptions.add("<x1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -411,7 +418,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 4 args - update location 10 tab complete")
         @Order(64)
         void testShopTabComplete_Update4Args_LocationWithoutStore() {
-            List<String> expectedOptions = Collections.singletonList("y1");
+            List<String> expectedOptions = Collections.singletonList("<y1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location 10 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -422,7 +429,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 4 args - update location world tab complete")
         @Order(65)
         void testShopTabComplete_Update4Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("x1");
+            List<String> expectedOptions = Collections.singletonList("<x1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -488,7 +495,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 5 args - update location DiscountMinus world tab complete")
         @Order(83)
         void testShopTabComplete_Update5Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("x1");
+            List<String> expectedOptions = Collections.singletonList("<x1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -499,7 +506,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 5 args - update location 10 20 tab complete")
         @Order(84)
         void testShopTabComplete_Update5Args_LocationWithoutStore() {
-            List<String> expectedOptions = Collections.singletonList("z1");
+            List<String> expectedOptions = Collections.singletonList("<z1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location 10 20 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -510,7 +517,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 5 args - update location world 10 tab complete")
         @Order(85)
         void testShopTabComplete_Update5Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("y1");
+            List<String> expectedOptions = Collections.singletonList("<y1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world 10 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -576,7 +583,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 6 args - update location DiscountMinus world 10 tab complete")
         @Order(105)
         void testShopTabComplete_Update6Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("y1");
+            List<String> expectedOptions = Collections.singletonList("<y1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world 10 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -587,7 +594,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 6 args - update location 10 20 30 tab complete")
         @Order(106)
         void testShopTabComplete_Update6Args_LocationWithoutStore() {
-            List<String> expectedOptions = Collections.singletonList("x2");
+            List<String> expectedOptions = Collections.singletonList("<x2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location 10 20 30 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -598,7 +605,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 6 args - update location world 10 20 tab complete")
         @Order(107)
         void testShopTabComplete_Update6Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("z1");
+            List<String> expectedOptions = Collections.singletonList("<z1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world 10 20 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -631,7 +638,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 7 args - update location DiscountMinus world 10 20 tab complete")
         @Order(112)
         void testShopTabComplete_Update7Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("z1");
+            List<String> expectedOptions = Collections.singletonList("<z1>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world 10 20 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -642,7 +649,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 7 args - update location 10 20 30 40 tab complete")
         @Order(113)
         void testShopTabComplete_Update7Args_LocationWithoutStore() {
-            List<String> expectedOptions = Collections.singletonList("y2");
+            List<String> expectedOptions = Collections.singletonList("<y2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location 10 20 30 40 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -653,7 +660,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 7 args - update location world 10 20 30 tab complete")
         @Order(114)
         void testShopTabComplete_Update7Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("x2");
+            List<String> expectedOptions = Collections.singletonList("<x2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world 10 20 30 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -686,7 +693,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 8 args - update location DiscountMinus world 10 20 30 tab complete")
         @Order(122)
         void testShopTabComplete_Update8Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("x2");
+            List<String> expectedOptions = Collections.singletonList("<x2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world 10 20 30 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -697,7 +704,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 8 args - update location 10 20 30 40 50 tab complete")
         @Order(123)
         void testShopTabComplete_Update8Args_LocationWithoutStore() {
-            List<String> expectedOptions = Collections.singletonList("z2");
+            List<String> expectedOptions = Collections.singletonList("<z2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location 10 20 30 40 50 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -708,7 +715,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 8 args - update location world 10 20 30 40 tab complete")
         @Order(124)
         void testShopTabComplete_Update8Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("y2");
+            List<String> expectedOptions = Collections.singletonList("<y2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world 10 20 30 40 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -730,7 +737,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 9 args - update location DiscountMinus world 10 20 30 40 tab complete")
         @Order(131)
         void testShopTabComplete_Update9Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("y2");
+            List<String> expectedOptions = Collections.singletonList("<y2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world 10 20 30 40 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -741,7 +748,7 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 9 args - update location world 10 20 30 40 50 tab complete")
         @Order(132)
         void testShopTabComplete_Update9Args_LocationWithoutStoreWithWorld() {
-            List<String> expectedOptions = Collections.singletonList("z2");
+            List<String> expectedOptions = Collections.singletonList("<z2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location world 10 20 30 40 50 ");
 
             assertEquals(expectedOptions, actualOptions);
@@ -752,11 +759,111 @@ class ShopCommandTest {
         @DisplayName("Test Shop - 10 args - update location DiscountMinus world 10 20 30 40 50 tab complete")
         @Order(140)
         void testShopTabComplete_Update10Args_LocationWithStore() {
-            List<String> expectedOptions = Collections.singletonList("z2");
+            List<String> expectedOptions = Collections.singletonList("<z2>");
             List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop update location DiscountMinus world 10 20 30 40 50 ");
 
             assertEquals(expectedOptions, actualOptions);
             printSuccessMessage("tab complete - \"shop update location DiscountMinus world 10 20 30 40 50\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 2 args - invalid option")
+        @Order(151)
+        void testShopTabComplete_2Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 3 args - invalid option")
+        @Order(152)
+        void testShopTabComplete_3Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 4 args - invalid option")
+        @Order(153)
+        void testShopTabComplete_4Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 5 args - invalid option")
+        @Order(154)
+        void testShopTabComplete_5Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 6 args - invalid option")
+        @Order(155)
+        void testShopTabComplete_6Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 7 args - invalid option")
+        @Order(156)
+        void testShopTabComplete_7Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 6 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5 6\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 8 args - invalid option")
+        @Order(157)
+        void testShopTabComplete_8Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 6 7 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5 6 7\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 9 args - invalid option")
+        @Order(158)
+        void testShopTabComplete_9Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 6 7 8 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5 6 7 8\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 10 args - invalid option")
+        @Order(159)
+        void testShopTabComplete_10Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 6 7 8 9 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5 6 7 8 9\"");
+        }
+
+        @Test
+        @DisplayName("Test Shop - 11 args - invalid option")
+        @Order(160)
+        void testShopTabComplete_11Args_InvalidOption() {
+            List<String> actualOptions = server.getCommandTabComplete(mrSparkzz, "shop invalid 2 3 4 5 6 7 8 9 10 ");
+
+            assertEquals(Collections.emptyList(), actualOptions);
+            printSuccessMessage("tab complete - \"shop invalid 2 3 4 5 6 7 8 9 10\"");
         }
     }
 
@@ -771,7 +878,7 @@ class ShopCommandTest {
         @Order(1)
         void testShopCommand_ConsoleSender() {
             performCommand(console, "shop");
-            assertEquals("§cOnly players can use this command!", console.nextMessage());
+            assertEquals(Notifier.compose(Notifier.CipherKey.ONLY_PLAYERS_CMD, null), console.nextMessage());
             printSuccessMessage("shop command - console sender");
         }
 
@@ -780,7 +887,7 @@ class ShopCommandTest {
         @Order(2)
         void testShopCommand_InvalidArgumentCount() {
             performCommand(mrSparkzz, "shop");
-            assertEquals("§cInvalid number of arguments!", mrSparkzz.nextMessage());
+            assertEquals(Notifier.compose(Notifier.CipherKey.INVALID_ARG_CNT, null), mrSparkzz.nextMessage());
             assertEquals("/shop [buy|sell|browse]", mrSparkzz.nextMessage());
             printSuccessMessage("shop command - invalid argument count");
         }
@@ -790,7 +897,7 @@ class ShopCommandTest {
         @Order(3)
         void testShopCommand_InvalidArgumentCountOneArg() {
             performCommand(mrSparkzz, "shop test");
-            assertEquals("§cInvalid number of arguments!", mrSparkzz.nextMessage());
+            assertEquals(Notifier.compose(Notifier.CipherKey.INVALID_ARG_CNT, null), mrSparkzz.nextMessage());
             assertEquals("/shop [buy|sell|browse]", mrSparkzz.nextMessage());
             printSuccessMessage("shop command - invalid argument count (1 arg)");
         }
